--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <section class="bg-dark text-white">
       <div class="container text-center">
         <h2 class="mb-4">Become a Partner!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Start Now!</a>
+        <a class="btn btn-light btn-xl sr-button" href="#">Start Now!</a>
       </div>
     </section>
 
