--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Partner
+                    Roberto Villarica
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Webmaster
                   </div>
                 </div>
               </div>
@@ -156,10 +156,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Partner
+                    Scott McClain Portis Jr.
                   </div>
                   <div class="project-name">
-                    Project Name
+                    CEO, Co-Founder
                   </div>
                 </div>
               </div>
@@ -171,10 +171,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Partner
+                    Ty Allen
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Co-Founder
                   </div>
                 </div>
               </div>
